# AI-based-training-assistant-for-high-school-knowledge-points-in-China-

./: README.md  app.json  package.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: routers.py
backend/app/core/: compliance.py  config.py
backend/app/data/: exam_blueprint.py  exam_paper.py  knowledge_graph.py  problem_bank.py  seed_data.py  seed_data_science.py
backend/app/modules/: parsing.py  recommend.py
backend/app/modules/diagnosis/: dataset.py  engine.py  joint_trainer.py  knowledge_tracing.py  neural_cd.py  pipeline.py  scheduler.py  synthetic.py  torch_backend.py  torch_models.py  traffic_sim.py
backend/app/modules/exam/: feedback.py  mock_store.py  predictor.py  sections.py
backend/app/services/: store.py
backend/artifacts/: diagnosis_joint.pt  registry.json
backend/artifacts/checkpoints/: diagnosis_joint_20260604T082037-0.pt
backend/scripts/: demo.py  demo_execution.py  demo_grading.py  demo_mlops.py  demo_mock_feedback.py  demo_multisubject.py  demo_planner.py  demo_real.py  demo_review.py  demo_variant.py  demo_vector_graphrag.py  fake_llm_server.py  train_diagnosis.py  train_pipeline.py
backend/tests/: test_api.py  test_compliance.py  test_diagnosis.py  test_execution.py  test_grading.py  test_mlops.py  test_mock_feedback.py  test_multisubject.py  test_pipeline_data.py  test_pipeline_train.py  test_planner.py  test_real_integration.py  test_recommend.py  test_review.py  test_solver_socratic.py  test_torch_diagnosis.py  test_variant.py  test_vector_graphrag.py
(+52 files in other folders)
